mac-loginwindow-png/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mac-loginwindow-png
  labels:
      app: mac-loginwindow-png
spec:
  ports:
    - name: proxy-http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
      app: mac-loginwindow-png
